--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,5 +41,10 @@ dependencies {
 
     implementation platform('com.google.firebase:firebase-bom:27.0.0')
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.squareup.okhttp3:okhttp:3.9.1'
+    implementation "androidx.cardview:cardview:1.0.0"
+    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+
 
 }
