--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         <activity android:name=".SignupActivity"></activity>
         <activity android:name=".SigninActivity"></activity>
         <activity android:name=".MainActivity"></activity>
+    </application>
 
         
 
