--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TRCRYPTO"
         android:usesCleartextTraffic="true">
-        <activity android:name=".WithdrawActivity"></activity>
+        <activity android:name=".WalletActivity"
+            android:parentActivityName=".MainActivity" ></activity>
+        <activity android:name=".WithdrawActivity" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
