--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,8 @@
         <activity
             android:name=".WalletActivity"
             android:parentActivityName=".MainActivity" />
-        <activity android:name=".WithdrawActivity" />
+        <activity android:name=".WithdrawActivity"
+            android:parentActivityName=".MainActivity"/>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
